--- a/carrito.html
+++ b/carrito.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    //header
+    <!-- header -->
     <div class="wrapper">
         <header class="header-mobile">
             <h1 class="logo">TrueFalse</h1>
@@ -18,7 +18,7 @@
                 <i class="bi bi-list"></i>
             </button>
         </header>
-        //aside & button
+        <!-- aside & button -->
         <aside>
             <button class="close-menu" id="close-menu">
                 <i class="bi bi-x"></i>
@@ -26,7 +26,8 @@
             <header>
                 <h1 class="logo">TrueFalse</h1>
             </header>
-            //nav
+        
+            <!-- nav -->
             <nav>
                 <ul>
                     <li>
@@ -41,12 +42,12 @@
                     </li>
                 </ul>
             </nav>
-            //footer
+            <!-- footer -->
             <footer>
                 <p class="texto-footer">© 2022 TrueFalse</p>
             </footer>
         </aside>
-        //main
+        <!-- main -->
         <main>
             <h2 class="titulo-principal">Carrito</h2>
             <div class="contenedor-carrito">
@@ -71,7 +72,7 @@
         </main>
     </div>
 
-    //script
+    <!-- script -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/carrito.js"></script>
