--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    //header
+    <!-- header -->
     <div class="wrapper">
         <header class="header-mobile">
             <h1 class="logo">TrueFalse</h1>
@@ -19,7 +19,7 @@
             </button>
         </header>
 
-        //aside
+        <!-- aside & button & nav -->
         <aside>
             <button class="close-menu" id="close-menu">
                 <i class="bi bi-x"></i>
@@ -27,7 +27,7 @@
             <header>
                 <h1 class="logo">TrueFalse</h1>
             </header>
-            //nav & button
+            
             <nav>
                 <ul class="menu">
                     <li>
@@ -49,12 +49,12 @@
                     </li>
                 </ul>
             </nav>
-            //footer
+            <!-- footer -->
             <footer>
                 <p class="texto-footer">© 2022 TrueFalse</p>
             </footer>
         </aside>
-        //main
+        <!-- main -->
         <main>
             <h2 class="titulo-principal" id="titulo-principal">Todos los productos</h2>
             <div id="contenedor-productos" class="contenedor-productos">
@@ -62,7 +62,7 @@
             </div>
         </main>
     </div>
-
+    <!-- script -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/menu.js"></script>
